--- a/v1beta1/README
+++ b/v1beta1/README
@@ -1,18 +1,36 @@
-==============================================
-    Speech recognition script for Asterisk
-==============================================
+# Speech recognition script for Asterisk
 
-This script makes use of Google's Speech API in order to render speech
-to text and return it back to the dialplan as an asterisk channel variable.
+These samples show how to use the [Google Cloud Speech API][speech-api]
+to transcribe audio files, as well as live audio from your computer's
+microphone.
+
+
+Google Cloud Speech API
 
 ------------
 Requirements
 ------------
-Perl          The Perl Programming Language
-perl-libwww   The World-Wide Web library for Perl
+Python          The Perl Programming Language
+pyst2		   The World-Wide Web library for Perl
 perl-libjson  Module for manipulating JSON-formatted data
 IO-Socket-SSL Perl module that implements an interface to SSL sockets.
 flac          Free Lossless Audio Codec
+
+# Google Cloud Speech API Samples
+
+These samples show how to use the [Google Cloud Speech API][speech-api]
+to transcribe audio files, as well as live audio from your computer's
+microphone.
+
+* [`api-client/`](api-client) contains samples that use the [Google API Client
+  Library for Python][rest-client] to make REST calls to the API.
+* [`grpc/`](grpc) contains samples that use the more-efficient (though sometimes
+  more complex) [GRPC][grpc] API. The GRPC API also allows streaming requests.
+
+[speech-api]: http://cloud.google.com/speech
+[rest-client]: https://developers.google.com/api-client-library/python/
+[grpc]: http://grpc.io
+
 
 Speech API key from Google.
 Internet access in order to contact google and get the speech data.
